force-app/main/default/objects/CC_Clasificacion_Maximo__c/CC_Clasificacion_Maximo__c.object-meta.xml
<CustomObject>
    <label>Clasificación Maximo</label>
    <nameField>
        <displayFormat>CLAS-MAX-{00000000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clasificaciones Maximo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>