force-app/main/default/objects/CC_Clasificacion_Maximo__c/fields/CC_Clave_Primaria_Externa__c.field-meta.xml
<CustomField>
    <fullName>CC_Clave_Primaria_Externa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Clave primaria externa</label>
    <length>140</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>