force-app/main/default/objects/CC_Clasificacion_Maximo__c/fields/CC_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>CC_Descripcion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción</label>
    <length>200</length>
    <type>Text</type>
</CustomField>