force-app/main/default/objects/CC_Clasificacion_Maximo__c/fields/CC_Nivel_1__c.field-meta.xml
<CustomField>
    <fullName>CC_Nivel_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nivel 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>