force-app/main/default/objects/CC_Clasificacion_Maximo__c/fields/CC_Nivel_2__c.field-meta.xml
<CustomField>
    <fullName>CC_Nivel_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nivel 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>