force-app/main/default/objects/CC_Clasificacion_Maximo__c/fields/CC_Path__c.field-meta.xml
<CustomField>
    <fullName>CC_Path__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clasificación</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>