force-app/main/default/objects/CC_Clasificacion_Maximo__c/fields/CC_Propietario__c.field-meta.xml
<CustomField>
    <fullName>CC_Propietario__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Propietario</label>
    <length>20</length>
    <type>Text</type>
</CustomField>