force-app/main/default/objects/CC_Clasificacion_Maximo__c/listViews/CC_Clasificacion_Maximo_Todas.listView-meta.xml
<ListView>
    <fullName>CC_Clasificacion_Maximo_Todas</fullName>
    <columns>NAME</columns>
    <columns>CC_Propietario__c</columns>
    <columns>CC_Descripcion__c</columns>
    <columns>CC_Nivel_1__c</columns>
    <columns>CC_Nivel_2__c</columns>
    <columns>CC_Nivel_3__c</columns>
    <columns>CC_Nivel_4__c</columns>
    <columns>CC_Nivel_5__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CC_Activa__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CC_Activa__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Todas</label>
</ListView>